<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">VEB应用市场</string>
    <string name="NO_TUJIAN_DATA">没推荐数据</string>
    <string name="NO_FILE_DATA">没文件数据</string>
    <string name="tuijian">VEB应用市场</string>
    <string name="top">排行</string>
    <string name="type">分类</string>
    <string name="search">查询</string>
    <string name="manage">管理</string>
    <string name="logo">图片</string>
    <string name="topic">主题</string>
    <string name="music">音乐</string>
    <string name="book">电子书</string>
    <string name="soft">软件</string>
    <string name="game">游戏</string>
    <string name="datetop">按日期</string>
    <string name="monthtop">按月期</string>
    <string name="totaltop">总排行</string>
    <string name="networkerr">网络错误！请查看手机数据连接是否正常</string>
    <string name="qianglituijian">强力推荐</string>
    <string name="zhuantituijian">专题推荐</string>
    <string name="zuixinshangjia">最新上架</string>
    <string name="freedownload"><u>免费</u></string>
    <string name="download">下载</string>
    <string name="downloadintro">软件介绍</string>
    <string name="connectioning">连接中....</string>
    <string name="connectfail">网络异常!</string>
    <string name="searchprompt">无相关内容信息!</string>
    <string name="start">继续</string>
    <string name="pause">暂停</string>
    <string name="clear">清除</string>
    <string name="cancel">取消</string>
    <string name="app_install">安装</string>
    <string name="app_open">打开</string>
    <string name="app_install_failed">安装失败</string>
    <string name="press_again_exit">在按一次退出</string>

    <dimen name="Text_NoData_Size">20px</dimen>
    <dimen name="icon_size">60px</dimen>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
